Deleted old templates and implemented adding sessions and its models

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,7 +47,16 @@
   <!-- Custom styles for admin template-->
   <link href="/static/css/sb-admin-2.css" rel="stylesheet">
 
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+
+  <!-- Datetime picker -->
+  <script src="/static/js/bootstrap-datetimepicker.min.js"></script>
+  <link rel="stylesheet" href="/static/css/bootstrap-datetimepicker.min.css">
+  <!-- <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/js/tempusdominus-bootstrap-4.js"></script> -->
+
+
 
 
 
