--- a/app/templates/practice.html
+++ b/app/templates/practice.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+
+
 {%block nav_content%}
 <ul class="navbar-nav ml-auto">
 
@@ -275,6 +277,102 @@
           </div>
         </div>
         <!-- end modal Milestone -->
+        <!-- Session Modal -->
+        <div class="modal fade" id="createSession" tabindex="-1" role="dialog" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title">Create a new Session</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+              <div class="modal-body">
+                <h6> Introduce data </h6>
+              <form action="/createSession" method="post" id="upload-form" enctype="multipart/form-data">
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                      <label> Name </label>
+                        <input class= "form-control" name="name" placeholder="Name" >
+                  </div>
+                </div>
+
+                <div class="row pt-2 pb-2">
+                    <div class='col'>
+                            <label> Start date</label>
+                           <div class="input-group date" data-target-input="nearest">
+                                <input type="text" class="form-control start-date" name="start_date" placeholder="dd/mm/yyyy hh:ii"/>
+                                <div class="input-group-append" >
+                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                </div>
+                            </div>
+                            <script>
+                                $('.start-date').datetimepicker({
+                                   format: 'dd/mm/yyyy hh:ii',
+
+                                });
+                            </script>
+
+                    </div>
+                </div>
+                <div class="row pt-2 pb-2">
+                    <div class='col'>
+                            <label> End date <i>(Optional)</i></label>
+                           <div class="input-group date" data-target-input="nearest">
+                                <input type="text" class="form-control end-date" name="end_date" placeholder="dd/mm/yyyy hh:ii"/>
+                                <div class="input-group-append" >
+                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                </div>
+                            </div>
+                            <script>
+                                $('.end-date').datetimepicker({
+                                  format: 'dd/mm/yyyy hh:ii',
+                                });
+                            </script>
+
+                    </div>
+                </div>
+
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                      <label> Import users for grouping</i> </label>
+                      <select class="custom-select" name="grouping_session" id="grouping_session" >
+                        {% for grouping in groupings%}
+                        <option value={{grouping.grouping_id}}>{{grouping.name}}</option>
+                        {% endfor%}
+                      </select>
+                  </div>
+                </div>
+
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                    <label> Initial Points </label>
+                    <input class= "form-control" name="points" type="number" min="0" step="1" value="0">
+
+                  </div>
+                </div>
+
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                      <label> Description <i>(Optional)</i> </label>
+                        <input class= "form-control" name="description" placeholder="Description" maxlength="1000" >
+                  </div>
+                </div>
+
+                <input type= "hidden" name="practice_id" value={{practice.id}}>
+
+                </div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn  btn-primary">Create</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end modal Session -->
           <!-- Delete Practice Modal-->
           <div class="modal fade" id="deletePractice" tabindex="-1" role="dialog"  aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -369,7 +467,6 @@
         </div>
       </div>
 
-      {% if role =="professor" or role=="admin"%}
       <h4 class="pb-2"> Milestones </h4>
 
       <div class="row">
@@ -387,9 +484,24 @@
           </div>
         {% endfor %}
       </div>
-      {% endif %}
 
         <h4 class="pb-2">Sessions</h4>
+
+        <div class="row">
+
+          {% for element in sessions%}
+            <div class="col-xl-3 col-sm-6 mb-5">
+              <div class="card">
+                <a href="#" class="btn btn-primary" >
+                    <span class="icon text-white-50">
+                      <i class="pr-2 fas fa-map-marker"></i>
+                      <b class="icon text-white">{{element.name}}</b>
+                    </span>
+                </a>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
 
       </div>
     </div>
