Added session view and implemented access for users and prof/admin

--- a/app/templates/practice.html
+++ b/app/templates/practice.html
@@ -492,7 +492,7 @@
           {% for element in sessions%}
             <div class="col-xl-3 col-sm-6 mb-5">
               <div class="card">
-                <a href="#" class="btn btn-primary" >
+                <a href="/session/{{element.id}}" class="btn btn-primary" >
                     <span class="icon text-white-50">
                       <i class="pr-2 fas fa-map-marker"></i>
                       <b class="icon text-white">{{element.name}}</b>
