--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,6 +52,7 @@
   <!-- Datetime picker -->
   <script src="/static/js/bootstrap-datetimepicker.min.js"></script>
   <link rel="stylesheet" href="/static/css/bootstrap-datetimepicker.min.css">
+  <link rel="stylesheet" href="/static/css/podium.css">
   <!-- <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/js/tempusdominus-bootstrap-4.js"></script> -->
@@ -233,6 +234,7 @@
 <script src="/static/vendor/chart.js/Chart.min.js"></script>
 
 <!-- Page level custom scripts -->
+<script src="/static/js/charts/podium.js"></script>
 <script src="/static/js/demo/chart-area-demo.js"></script>
 <script src="/static/js/demo/chart-pie-demo.js"></script>
 
