Minor changes in presentation

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -167,7 +167,7 @@
           <div class="col-8">
           <h1 class="h3 mb-0 text-gray-800">Home</h1>
           </div>
-          <div class="col-2 ">
+          <div class="col">
 
 
             {% if privilege=='professor' or privilege== 'admin'%}
@@ -258,7 +258,7 @@
             {% endif %}
 
           </div>
-          <div class="col-2">
+          <div class="col">
             <a href="/allSubjects" class="btn btn-light shadow animated--grow-in w-100" >
                 <span class="icon">
                   See all subjects
