Leaderboard in session implemented and working

--- a/app/templates/session.html
+++ b/app/templates/session.html
@@ -166,6 +166,7 @@
       <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <div class="col-8">
           <h1 class="h3 mb-0 text-gray-800">Session {{session_a.name}}</h1>
+          <div id="session_id" value="{{session_a.id}}"></div>
         </div>
 
         {% if role=="admin" or role=="professor"%}
@@ -358,7 +359,7 @@
 </a>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.js'></script><script  src="/static/js/podium.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.js'></script><script  src="/static/js/charts/podium.js"></script>
 
 
 
