--- a/app/templates/session.html
+++ b/app/templates/session.html
@@ -322,15 +322,65 @@
 
       <div class="row">
 
-        <!-- Area Chart -->
-        <div class="col-12">
-          <!-- partial:index.partial.html -->
-          <div id="podium"></div>
-          <!-- partial -->
 
+          <!-- Area Chart -->
+          <div class="col justify-content-center">
+            <h3 class="pb-3 text-center text-gray-800"> Top 3 </h3>
+
+            <!-- partial:index.partial.html -->
+            <div id="podium"></div>
+            <!-- partial -->
+
+          </div>
+      </div>
+      <br><hr><br>
+
+      <div class="row pt-8">
+        <div class="col justify-content-center">
+        <h3 class="pb-3 text-center text-gray-800"> General Clasification</h3>
+
+      <div class="wrap-table100">
+        <div class="table100 ver1 m-b-110">
+          <div class="table100-head">
+            <table>
+              <thead>
+                <tr class="row100 head">
+                  <th class="cell100 column1 text-center">Class name</th>
+                  <th class="cell100 column2 text-center">Type</th>
+                  <th class="cell100 column3 text-center">Hours</th>
+                  <th class="cell100 column4 text-center">Trainer</th>
+                  <th class="cell100 column5 text-center">Spots</th>
+                </tr>
+              </thead>
+            </table>
+          </div>
+
+            <div class="table100-body js-pscroll">
+              <table>
+                <tbody>
+                  <tr class="row100 head">
+                    <td class="cell100 column1 text-center">Like a butterfly</td>
+                    <td class="cell100 column2 text-center">Boxing</td>
+                    <td class="cell100 column3 text-center">9:00 AM - 11:00 AM</td>
+                    <td class="cell100 column4 text-center">Aaron Chapman</td>
+                    <td class="cell100 column5 text-center">10</td>
+                  </tr>
+
+                  <tr class="row100 body">
+                    <td class="cell100 column1 text-center">Mind & Body</td>
+                    <td class="cell100 column2 text-center">Yoga</td>
+                    <td class="cell100 column3 text-center">8:00 AM - 9:00 AM</td>
+                    <td class="cell100 column4 text-center">Adam Stewart</td>
+                    <td class="cell100 column5 text-center">15</td>
+                  </tr>
+
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
 
-
+        </div>
       </div>
 
 
