--- a/app/templates/manageSession.html
+++ b/app/templates/manageSession.html
@@ -163,7 +163,7 @@
       {% endwith %}
       <!-- Page Heading -->
       <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <div class="col-8">
+        <div class="col-10">
           <h1 class="h3 mb-0 text-gray-800">Users from {{session_a.name}}</h1>
         </div>
 
@@ -171,23 +171,11 @@
       {% if role=='professor' or role=='admin'%}
 
       <div class="col">
-        <div class="dropdown">
-          <button class="btn btn-primary dropdown-toggle shadow animated--grow-in w-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-cloud-upload-alt mr-2"></i>
-            Import users
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <button class="dropdown-item" data-toggle="modal" data-target="#uploadUserModal">
-              <i class="fas fa-user mr-2"></i>
-              Unique user
+        <button class="btn btn-primary" data-toggle="modal" data-target="#uploadUserModal">
+          <i class="fas fa-cloud-upload-alt mr-2"></i>
+          Insert User
+        </button>
 
-            </button>
-            <button type="button" class="dropdown-item" data-toggle="modal" data-target="#uploadUsersCSVModal">
-              <i class="fas fa-file-csv mr-2"></i>
-              Import users from CSV
-            </button>
-          </div>
-        </div>
       </div>
 
   <!-- User Modal -->
@@ -196,7 +184,7 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="uploadUsersCSVTitle"> Insert user</h4>
+            <h4 class="modal-title" > Insert user in session</h4>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -207,40 +195,12 @@
             <div class="row">
               <div class="col">
                 <div class="form-group">
-                <form action="/uploadUser" method="post" id="upload-form">
+                <form action="/uploadUserSession" method="post" id="upload-form">
                   <div class="row pt-2 pb-2">
                     <div class="col">
-                      <label>Email</label>
-                      <input class= "form-control" type="email" name="email" id="js-upload-files" placeholder="User email" enctype="multipart/form-data" >
+                      <input class= "form-control" type="email" name="email" placeholder="User email"  >
 
                       <input type="hidden" name="session_id" value={{session_a.id}}>
-                    </div>
-                  </div>
-
-                  <div class="row pt-2 pb-2">
-                    <div class="col">
-                      <label> Role </label>
-                      <select class="custom-select" name="role" id="role">
-                        {% for role in roles_db%}
-                        <option value={{role.name}}>{{role.name}}</option>
-                        {% endfor %}
-                      </select>
-                    </div>
-                  </div>
-
-                  <div class="row pt-2 pb-2">
-                    <div class="col">
-                      <label> Group </label>
-                      <select class="custom-select" name="addGroup" id="addGroup">
-                          <option value="0">No group</option>
-                        {% for group in groups%}
-                          {% for grouping in groupings%}
-                            {% if group.grouping_id == grouping.grouping_id%}
-                            <option value={{group.group_id}}>Grouping {{grouping.name}} - Group {{group.name}}</option>
-                            {% endif %}
-                          {% endfor %}
-                        {% endfor %}
-                      </select>
                     </div>
                   </div>
 
@@ -251,7 +211,7 @@
 
           <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                  <button type="submit" class="btn  btn-primary">Upload</button>
+                  <button type="submit" class="btn  btn-primary">Insert</button>
                 </form>
 
           </div>
@@ -297,7 +257,9 @@
                   <div class="row">
 
                     {% if not user==(users[0].email.split('@'))[0]%}
-
+                    <div class="col text-center">
+                      <a data-toggle="modal" data-id="{{users[0].email}}" class="modifyPointsModal btn btn-primary" href="#modifyPointsModal">Modify Points</a>
+                    </div>
                     <div class="col text-center">
                       <form action="/deleteUserSession" method="POST">
                           <input type="hidden" name="user_id" value={{users[0].id}} >
@@ -305,6 +267,57 @@
                           <button type="submit" class="btn btn-secondary ">Delete</button>
                       </form>
                     </div>
+
+
+                    <script>
+                    $('.modifyPointsModal').click( function (evt) {
+                          evt.stopImmediatePropagation();
+                          $("#modifyPointsModal").modal()
+
+                          var userEmail = $(this).data('id');
+
+                          $(".modal-body #email").val( userEmail );
+                        });
+                    </script>
+
+                    <!-- modifyPointsModal-->
+                    <div class="modal fade" id="modifyPointsModal" tabindex="-1" role="dialog" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h4 class="modal-title" >Modify Points</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+
+                          <div class="modal-body">
+
+                          <form action="/changePoints" method="post" id="upload-form" enctype="multipart/form-data">
+                            <div class="row pt-2 pb-2">
+                              <div class="col">
+
+                                <input class= "form-control" name="points" type="number" min="0" step="1" value="0">
+                                <input type="hidden" name="email" id="email" value=""/>
+                                <input type="hidden" name="session_id" value={{session_a.id}}>
+
+                              </div>
+
+                            </div>
+
+                            </div>
+
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn  btn-primary">Update</button>
+                            </form>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <!-- end modifyPointsModal -->
 
                   {% endif %}
                   </div>
